--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -6,6 +6,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SherpaDesk"
     xmlns:common="using:SherpaDesk.Common"
+    xmlns:Controls="using:WinRTXamlToolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -36,7 +37,95 @@
             <Button x:Name="backButton" Click="GoHome" Style="{StaticResource BackButtonStyle}"/>
             <TextBlock x:Name="pageTitle" Grid.Column="1" Style="{StaticResource PageHeaderTextStyle}" Text="Add Time" FontWeight="Normal"/>
         </Grid>
+        <ScrollViewer HorizontalAlignment="Left" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="1" Height="auto" VerticalAlignment="Top" Width="auto">
 
+            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="#FF004174">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,0,0,0" TextWrapping="Wrap" Text="Log My Time" VerticalAlignment="Top" FontSize="40"/>
+                <TextBlock x:Name="DateLabel" HorizontalAlignment="left" Grid.Row="0" Grid.Column="2" TextWrapping="Wrap" Text="" Grid.ColumnSpan="2" VerticalAlignment="Top" FontSize="40"/>
+
+                <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,25,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="30"/>
+                <ComboBox Grid.Column="0" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="10,0,0,0" VerticalAlignment="Top">
+                    <ComboBoxItem Content="Administrator, Organization" />
+                    <ComboBoxItem Content="Queue, New Tickets" />
+                </ComboBox>
+
+                <TextBlock HorizontalAlignment="left" Grid.Row="1" Grid.Column="2" Margin="0,25,0,0" TextWrapping="Wrap" Text="Account" VerticalAlignment="Top" FontSize="30"/>
+                <ComboBox Grid.Column="2" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+                    <ComboBoxItem Content="Micajah" />
+                    <ComboBoxItem Content="Add New Account..." Foreground="#FF00A10A"/>
+                </ComboBox>
+
+                <TextBlock HorizontalAlignment="left" Grid.Row="1" Grid.Column="4" Margin="0,25,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="30"/>
+                <ComboBox Grid.Column="4" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+                    <ComboBoxItem Content="Consulting" />
+                    <ComboBoxItem Content="Add New Task Type..." Foreground="#FF00A10A"/>
+                </ComboBox>
+
+                <TextBlock HorizontalAlignment="left" Grid.Row="3" Grid.Column="0" Margin="10,25,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="30"/>
+                <TextBox AcceptsReturn="True" Margin="10,0,0,0" Grid.RowSpan="3" HorizontalAlignment="Center" Height="300" Grid.Row="4" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Top" FontSize="24" Width="500" />
+                <CheckBox Content="Billable" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="7" VerticalAlignment="Top" FontSize="20" IsChecked="True"/>
+
+                <Grid Style="{StaticResource LayoutRootStyle}" Grid.Column="2" Grid.ColumnSpan="3" Grid.RowSpan="3" Grid.Row="4" Background="#FF6B3B28">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="60"/>
+                        <RowDefinition Height="120"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="10"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="10"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="1" Margin="0,25,0,0" TextWrapping="Wrap" Text="Start" VerticalAlignment="Top" FontSize="30"/>
+                    <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="1" Margin="70,30,0,0" TextWrapping="Wrap" Text="hh:mm" VerticalAlignment="Top" FontSize="20"/>
+                    <TextBox x:Name="StartTime" Margin="0,0,0,0" HorizontalAlignment="Center" Height="100" Grid.Row="1" TextWrapping="Wrap" Grid.Column="1" Text="" VerticalAlignment="Top" FontSize="24" Width="130" />
+                    <ComboBox x:Name="AMPM" Grid.Column="3" Grid.Row="1" FontSize="36" HorizontalAlignment="Left" Width="130" Height="100" Margin="0,0,0,0" VerticalAlignment="Top">
+                        <ComboBoxItem Content="AM" />
+                        <ComboBoxItem Content="PM" />
+                    </ComboBox>
+
+                    <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="5" Margin="0,25,0,0" TextWrapping="Wrap" Text="Stop" VerticalAlignment="Top" FontSize="30"/>
+                    <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="5" Margin="70,30,0,0" TextWrapping="Wrap" Text="hh:mm" VerticalAlignment="Top" FontSize="20"/>
+                    <TextBox x:Name="EndTime" Margin="0,0,0,0" HorizontalAlignment="Center" Height="100" Grid.Row="1" TextWrapping="Wrap" Grid.Column="5" Text="" VerticalAlignment="Top" FontSize="24" Width="130" />
+                    <ComboBox x:Name="EndTimeAMPM" Grid.Column="7" Grid.Row="1" FontSize="36" HorizontalAlignment="Left" Width="130" Height="100" Margin="0,0,0,0" VerticalAlignment="Top">
+                        <ComboBoxItem Content="AM" />
+                        <ComboBoxItem Content="PM" />
+                    </ComboBox>
+
+                    <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="9" Margin="0,25,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="30"/>
+                    <TextBox Margin="0,0,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Center" Height="100" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
+
+                </Grid>
+                <Button Content="Save My Time" Grid.Column="2" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" Width="500" FontSize="36" Background="#FF2F9129"/>
+            </Grid>
+        </ScrollViewer>
         <VisualStateManager.VisualStateGroups>
 
             <!-- Visual states reflect the application's view state -->
