--- a/SherpaDesk/OnHold.xaml
+++ b/SherpaDesk/OnHold.xaml
@@ -1,11 +1,12 @@
 ﻿<common:LayoutAwarePage
     x:Name="pageRoot"
-    x:Class="SherpaDesk.Info"
+    x:Class="SherpaDesk.OnHold"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SherpaDesk"
     xmlns:common="using:SherpaDesk.Common"
+    xmlns:Controls="using:WinRTXamlToolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -23,33 +24,45 @@
     -->
     <Grid Style="{StaticResource LayoutRootStyle}" Background="#FF004174">
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="#FF004174">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
+
+        <!-- Back button and page title -->
+        <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <TextBlock HorizontalAlignment="right" Grid.Row="0" TextWrapping="Wrap" Text="New Messages:" Margin="10,8,0,0" VerticalAlignment="Top" FontSize="36"/>
-            <HyperlinkButton x:Name="NewMessagesLink" Content="0" Grid.Row="0" Grid.Column="1" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="36" Foreground="White" Click="NewMessagesLink_Click"/>
-            <TextBlock HorizontalAlignment="right" Grid.Row="1" TextWrapping="Wrap" Text="Open Tickets:" Margin="10,8,0,0" VerticalAlignment="Top" FontSize="36"/>
-            <HyperlinkButton x:Name="OpenTicketsLink" Content="0" Grid.Row="1" Grid.Column="1" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="36" Foreground="White" Click="OpenTicketsLink_Click"/>
-            <TextBlock HorizontalAlignment="right" Grid.Row="2" TextWrapping="Wrap" Text="Open as End User:" Margin="10,8,0,0" VerticalAlignment="Top" FontSize="36"/>
-            <HyperlinkButton x:Name="OpenAsEndUserLink" Content="0" Grid.Row="2" Grid.Column="1" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="36" Foreground="White" Click="OpenAsEndUserLink_Click"/>
-            <TextBlock HorizontalAlignment="right" Grid.Row="3" TextWrapping="Wrap" Text="On Hold:" Margin="10,8,0,0" VerticalAlignment="Top" FontSize="36"/>
-            <HyperlinkButton x:Name="OnHoldLink" Content="0" Grid.Row="3" Grid.Column="1" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="36" Foreground="White" Click="OnHoldLink_Click"/>
-            <TextBlock HorizontalAlignment="right" Grid.Row="4" TextWrapping="Wrap" Text="Follow-Up Dates:" Margin="10,8,0,0" VerticalAlignment="Top" FontSize="36"/>
-            <HyperlinkButton x:Name="FollowUpDatesLink" Content="0" Grid.Row="4" Grid.Column="1" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="36" Foreground="White" Click="FollowUpDatesLink_Click"/>
+            <Button x:Name="backButton" Click="GoHome" Style="{StaticResource BackButtonStyle}"/>
+            <TextBlock x:Name="pageTitle" Grid.Column="1" Style="{StaticResource PageHeaderTextStyle}" Text="On Hold" FontWeight="Normal"/>
         </Grid>
+        <ScrollViewer HorizontalAlignment="Left" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="1" Height="auto" VerticalAlignment="Top" Width="auto">
+
+            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="#FF1B3467">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="60"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <CheckBox HorizontalAlignment="Left" Margin="0,3,0,0" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center"/>
+                <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Tkt#" VerticalAlignment="Center"/>
+                <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="End User" VerticalAlignment="Center"/>
+                <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="3" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Tech Name" VerticalAlignment="Center"/>
+                <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="4" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Account" VerticalAlignment="Center"/>
+                <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="5" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Class" VerticalAlignment="Center"/>
+                <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="6" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Time" VerticalAlignment="Center"/>
+                <TextBlock HorizontalAlignment="Left" Margin="40,0,40,0" Grid.Column="7" Grid.Row="0" TextWrapping="Wrap" FontSize="30" Text="Days Old | Status" VerticalAlignment="Center"/>
+            </Grid>
+        </ScrollViewer>
         <VisualStateManager.VisualStateGroups>
 
             <!-- Visual states reflect the application's view state -->
