--- a/SherpaDesk/MainPage.xaml
+++ b/SherpaDesk/MainPage.xaml
@@ -20,6 +20,8 @@
         <Button x:Name="AddTimeButton" Content="Add Time" Grid.Column="1" Margin="0,0,10,0" Grid.Row="0" HorizontalAlignment="Left" Height="88" VerticalAlignment="Top" Width="245" FontSize="48" Click="AddTimeClick" RenderTransformOrigin="0,0" Foreground="White" Background="#FF004174" BorderBrush="#FF004174" FontWeight="Normal"/>
         <Button x:Name="AddTicketButton" Content="Add Ticket" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left" Height="88" VerticalAlignment="Top" Width="270" FontSize="48" Click="AddTicketClick" RenderTransformOrigin="0,0" Foreground="White" Background="#FF004174" BorderBrush="#FF004174" FontWeight="Normal"/>
         <Frame x:Name="MainFrame" Content="Frame" HorizontalAlignment="Stretch" Grid.Row="1" Grid.ColumnSpan="3" VerticalAlignment="Top" />
-        <HyperlinkButton Content="http://app.sherpadesk.com" NavigateUri="http://app.sherpadesk.com" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="Left" Margin="195,10,0,0" VerticalAlignment="Top" Foreground="White"/>
+        <HyperlinkButton Content="http://app.sherpadesk.com" NavigateUri="http://app.sherpadesk.com" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="right" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="White"/>
+
+        <Button x:Name="LogOutButton" Content="Log Out" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" Click="LogOutButton_Click" RenderTransformOrigin="0,0" Foreground="White" Background="#FF004174" BorderBrush="#FF004174" FontWeight="Normal" Margin="154,88,0,0"/>
     </Grid>
 </Page>
