--- a/SherpaDesk/AddTicket.xaml
+++ b/SherpaDesk/AddTicket.xaml
@@ -84,7 +84,7 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock HorizontalAlignment="right" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-                <ComboBox Grid.Column="1" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+                <ComboBox x:Name="EndUserCombo" Grid.Column="1" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
                     <ComboBoxItem Content="" />
                     <ComboBoxItem Content="Make Me the User" Foreground="#FF0B0078"/>
                     <ComboBoxItem Content="Add New User.." Foreground="#FF00A10A"/>
